[metadata]
name = led-indicator-messager
version = 0.0.4
author = Tom Hastings
author_email = tom@devsoft.co.za
description = Helper class to send messages to LED Website Indicator MQTT service
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomjuggler/led_indicator_messager
project_urls =
    Bug Tracker = https://github.com/tomjuggler/led_indicator_messager/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires = 
paho-mqtt == 1.5.1
package_dir =
    = src
packages = find:
python_requires = >=3.6


[options.packages.find]
where = src
